--- a/KNR-Client/app/index.html
+++ b/KNR-Client/app/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
+
 <html lang="en" ng-app="myApp" class="no-js">
-<!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>My AngularJS App</title>
-<!-- <base href="/" /> -->
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
@@ -44,13 +39,12 @@
 
 <body>
 
-
+	<div ng-include src="'commons/Header/header.html'"></div>
 
 	<div ng-view></div>
 
 
 	<script src="bower_components/angular/angular.js"></script>
-
 	<script src="bower_components/ng-dialog/js/ngDialog.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
@@ -60,13 +54,13 @@
 	<script src="app.js"></script>
 	<script src="/commons/Registration/Registration.js"></script>
 	<script src="/commons/Login/Login.js"></script>
+	<script src="/commons/logout/logout.js"></script>
 	<script src="/components/AddOilMill/addOilMill.js"></script>
 	<script src="/components/RiceMillList/riceMillList.js"></script>
 	<script src="/components/AddRiceMill/addRiceMill.js"></script>
 	<script src="/commons/Home/Home.js"></script>
 	<script src="/components/editRiceMill/editRiceMill.js"></script>
 	<script src="/components/deleteRiceMill/deleteRiceMill.js"></script>
-	<script src="/commons/Home/logoutPopup.js"></script>
 	<script src="components/version/version.js"></script>
 	<script src="components/version/version-directive.js"></script>
 	<script src="components/version/interpolate-filter.js"></script>
